I have fixed the issue with the local storage and the not being able to access them, added the login check and function, NOTE: might add a longer password, not too sure yet though. Added a check before logging in and pin creation process to see if the pin is no longer or shorter than 4 digits. Also made sure that weather and menu are not showing untill after the user has put theior pin in

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ p {
 }
 
 body {
-    height: 100vh;
+    height: fit-content;
     background-color: var(--background);
     font-family: 'Inter', sans-serif;
 }
@@ -31,6 +31,16 @@ body {
     align-items: center;
     gap: 30px;
 }
+
+.menu__not-sign-in {
+    width: 100%;
+    padding: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+}
+
 .greeting > p {
     font-size: 22px;
     margin: 0;
@@ -52,6 +62,11 @@ body {
     gap: 16px;
     height: 33px;
 }
+
+.menu > .menu-items > .menu-item > p {
+    width: fit-content;
+}
+
 .menu > .menu-items > .menu-item > img{
     height: 30px;
     width: 30px;
@@ -120,6 +135,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
 }
 
 .indicator-container {
